try to add scaling policy

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -100,6 +100,72 @@
     wait_for_instances: "{{ asg_wait_for_instances }}"
     wait_timeout: "{{ asg_wait_timeout }}"
 
+- name: create scale down  policy
+  ec2_scaling_policy:
+    state: present
+    region: "{{ aws_region }}"
+    name: scale-down-policy
+    adjustment_type: ChangeInCapacity
+    asg_name: "{{ asg_name }}"
+    scaling_adjustment: -1
+    min_adjustment_step: -1
+    cooldown: 300
+  register: scale_down_policy
+  tags: scaling_policy
+
+- name: create scale up policy
+  ec2_scaling_policy:
+    state: present
+    region: "{{ aws_region }}"
+    name: scale-up-policy
+    adjustment_type: ChangeInCapacity
+    asg_name: "{{ asg_name }}"
+    scaling_adjustment: 1
+    min_adjustment_step: 1
+    cooldown: 300
+  register: scale_up_policy
+  tags: scaling_policy
+
+- name: create scale down alarm
+  ec2_metric_alarm:
+    state: present
+    region: "{{ aws_region }}"
+    name: "cpu-low"
+    metric: CPUUtilization
+    namespace: "AWS/EC2"
+    statistic: Average
+    comparison: "<="
+    threshold: 8.0
+    period: 120
+    evaluation_periods: 1
+    unit: "Percent"
+    description: "This will alarm when cpu usage average is lower than 5% for 15 minutes "
+    dimensions: 
+      AutoScalingGroupName: "{{ asg_name }}"
+    alarm_actions: 
+    - "{{ scale_down_policy.arn }}"
+  tags: alarm
+
+- name: create scale up alarm
+  ec2_metric_alarm:
+    state: present
+    region: "{{ aws_region }}"
+    name: "cpu-high"
+    metric: CPUUtilization
+    namespace: "AWS/EC2"
+    statistic: Average
+    comparison: ">="
+    threshold: 9.0
+    period: 120
+    evaluation_periods: 1
+    unit: "Percent"
+    description: "This will alarm when cpu usage average is higher than 90% for 15 minutes "
+    dimensions: 
+      AutoScalingGroupName: "{{ asg_name }}"
+    alarm_actions: 
+      - "{{ scale_up_policy.arn }}"
+  tags: alarm
+
 - name: Delete the Old Launch Configuration
   ec2_lc:
     region: "{{ aws_region }}"
